# fastapi-clean-architecture

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline-ci.yaml
src/adapters/repositories/auction/: in_memory.py
src/domain/enitites/: auction.py  bid.py  item.py
src/domain/value_objects/: price.py
src/ports/repositories/: auction.py
src/use_cases/: exceptions.py  submit_bid.py
tests/: utils.py
tests/unit/: submit_bid_use_case_test.py
