[tool.poetry]
name = "ricva-api"
version = "0.1.0"
description = "Ricva API"
authors = ["flavien-hugs <haf@incubtek.com>"]
packages = [{include = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic-settings = "^2.2.1"
beanie = "^1.26.0"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mongomock-motor = "^0.0.29"

[tool.black]
line-length = 113
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \*.egg-info
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
app = 'src.cli:app'
load_area_data = 'src.shared.load_area_data:load_area_data'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = 'tests/.test.env'
env_override_existing_values = 1
python_files = "test_*.py"
asyncio_mode = "auto"
filterwarnings = [
  "ignore",
  "ignore:.*U.*mode is deprecated:DeprecationWarning"
]
